[FIXED JENKINS-26406] Build history text field wrap fails when containing markup
(cherry picked from commit b31bb1cc1c5a61a3e984e45e33cafa6130517938)

--- a/war/src/main/webapp/css/style.css
+++ b/war/src/main/webapp/css/style.css
@@ -956,7 +956,6 @@ table.parameters > tbody:hover {
   margin-top: 5px;
   white-space: normal;
   opacity: 0.6;
-  font-style: italic;
 }
 
 #buildHistory .build-row-cell {
